# Master_Thesis-Sensor-Data-Imputation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/sensor_imputation_thesis/han/: EDA_data_availability.ipynb  data_availablility_of_top9_columns.py  dataframe_Feb.py  feature_importance.ipynb  linear_regression_model.py  mlflow.ipynb  tabPFN_model.py  tabPFN_model_baseline.py  vae_finetuned.py  vae_model.py
src/sensor_imputation_thesis/nadire/: FInal_te_air_comp_avae.py  FInal_te_air_scav_recvae.py  GP-VAE.py  GP_VAE_Pypots.py  Inter_GP_VAE_Pypots.py.ipynb  Interactive - Pypots_model_lighter.py.ipynb  Interactive - VAErescue.py.ipynb  Interactive - latestPypots_model_lighter.py.ipynb  Interactive -newest Pypots_model_lighter.py.ipynb  Models.ipynb  Pypots_model.py  SAITS.py  SAITS.py.ipynb  SAITS_synthetic.py  SimpleModelsfortargetcol.ipynb  Unmasked-GP-VAE.py  VAE_ALL_final_MCAR.py  VAErescue.py  justthesisrelated.ipynb  list_database_tags.py  load.py  load_data.py  load_data_for_models.py  multilinear(VAE)forprbaroFinal.py  new_models.ipynb  pr_barovae.py  pr_cyl_max__vaerevised.py  pr_exh_turb_out__vae.py  sql.py  test.ipynb  trial  uc220_example.py  vae2.0.py  vaeexample copy.py  vaeexample.py  vaereviseddiffeimputation copy.py
src/sensor_imputation_thesis/nadire/BasicModels/: Basicmodels.ipynb  SimpleModelsfortargetcol.ipynb  new_models.ipynb
src/sensor_imputation_thesis/nadire/Dataload&SQL/: SQL_load_data_for_models.py  hello.py  sql.py
src/sensor_imputation_thesis/nadire/FinalImputationModels/: GP-VAE-revisedfromvae.py  GP_VAE_Pypots.py  SAITS.py  Unmasked-GP-VAE.py  VAE_ALL_final_MCAR.py
src/sensor_imputation_thesis/nadire/VAEs/: VAErescue.py  multilinear(VAE)forte_air_scav_rec.py  vae3.py  vaereviseddiffeimputation copy.py
src/sensor_imputation_thesis/shared/: baba_wrapper.py  load_data.py  out.txt  print_tags.py  tags.py  uc220_example.py  uc90_example.py  vaeexample.py
src/sensor_imputation_thesis/shared/mlflow.example/: README.md  __init__.py  example_mlflow_model_logging.py
